--- a/front-project/src/modules/Aside.module.css
+++ b/front-project/src/modules/Aside.module.css
@@ -1,14 +1,15 @@
 
+
 header{
     font-size: 13px;
+    display: grid;
+
+    text-align: center;
 }
 .container{
-    width: 200px;
     background-color: white;
     border-radius: 10px;
     margin: 10px;
-    justify-content: center;
-    justify-items: center;
     text-align: center;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -36,13 +37,17 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 70x;
+    width: 150px;
     height: 50px;
     border-radius: 10px;
     cursor: pointer;
     font-size: 12px;
+    border: none;
 }
 
+footer{
+    display: grid;
+}
 
 .button:hover{
     background-color: rgb(0, 0, 0);
