--- a/front-project/src/modules/Header.module.css
+++ b/front-project/src/modules/Header.module.css
@@ -1,13 +1,13 @@
 .container{
     background-color: white;
-    display: flex;
-    justify-content: center;
     text-align: center;
     flex-direction: column;
-    height: 50px;
+    height: 50px;   
 }
 
 .title{
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 1.5rem;
   color: black;
   font-family: "Inter", sans-serif;
