--- a/front-project/src/modules/Main.module.css
+++ b/front-project/src/modules/Main.module.css
@@ -1,3 +1,48 @@
-.container{
-    background-color: #EEF1F5;
+.content{
+    margin-top: 30px;
+    display: grid;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: bold;
+    width: 550px; 
+}
+
+label{
+    margin-top: 0px;
+}
+form{
+    display: grid;
+    padding-top: 100px;
+    margin-left: 100px;
+    margin-bottom: 200px;
+}
+
+select{
+    width: 450px;
+    height:50px;
+    border-radius: 10px;
+    margin-bottom: 100px;
+
+
+}
+
+input{
+    width: 450px;
+    height:50px;
+    border-radius: 10px;
+}
+button{
+    margin-top: 50px;
+    width: 400px;
+    height: 40px;
+    border-radius: 10px;
+    background: #FF0000;
+    color: white;
+    font-style: bold;
+    cursor: pointer;
+}
+
+button:hover{
+    background: #000;
+    
 }
